<resources>
    <string name="app_name">AutoLearn</string>
    <string name="app_title">Um app especial, para uma criança especial</string>

    <string name="back4app_server_url">https://parseapi.back4app.com/</string>
    <string name="back4app_app_id">siMGXanTdwCvEaLeyE2TosO9jUUNR5cKT7xgipcM</string>
    <string name="back4app_client_key">T8YSlfwMMSiEl5KfVl8UasT13aLu2mEYbl4YM7db</string>

    <string name="sadButton">Tristeza</string>
    <string name="happyButton">Felicidade</string>
    <string name="angryButton">Raiva</string>
    <string name="afraidButton">Medo</string>
    <string name="disgustedButton">Nojo</string>

    <string name="talkButton">Click para falar</string>
    <string name="auxTextView">Temporário</string>

    <string name="musicNameRain">Chuva</string>
    <string name="musicNameWind">Vento</string>
    <string name="musicNamePiano">Piano</string>
    <string name="musicNameLeaf">Folhas</string>
    <string name="musicVibra">Vibração</string>
    <string name="tocarString">Tocar</string>
    <string name="pararString">Pausar</string>
    <string name="titleVibra">Escolha uma das músicas para descansar e relaxar!</string>
    <string name="empty"> </string>

    <string name="contentImageAnimal">Imagem de um animal</string>

    <string name="dangerText">Perigoso</string>
    <string name="secureText">Seguro</string>

    <string name="nextSeq">Próximo</string>
    <string name="one">(Primeiro) 1</string>
    <string name="two">(Segundo) 2</string>
    <string name="third">(Terceiro) 3</string>

    <string name="signIn">Entrar</string>
    <string name="signUp">Cadastre-se</string>
    <string name="username">Usuário</string>
    <string name="password">Senha</string>
    <string name="text_email">Email</string>
    <string name="text_save">Salvar</string>
    <string name="text_cancel">Cancelar</string>
    <string name="lembrarPass">Lebrar credenciais?</string>

    <string name="rendimento">Rendimento</string>
    <string name="dangerName">Será perigoso?</string>
    <string name="micName">Qual é esse animal?</string>
    <string name="vibraName">Vamos relaxar!</string>
    <string name="orderName">Ordem de eventos!</string>
    <string name="emotionName">Qual é a emoção?</string>

    <string name="imagemDescrible">Imagem</string>

</resources>
