<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteY="25dp">

    <TextView
        android:id="@+id/backgroundInitial"
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:background="@color/colorLightBlue"
        android:text="@string/empty"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_weight="6"
        android:text="@string/app_name"
        android:textColor="#000000"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/username"
        android:textColor="#000000"
        android:textSize="25sp"
        android:fontFamily="cursive"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toEndOf="@+id/textViewTitle"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageViewDanger"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="108dp"
        android:maxHeight="100dp"
        android:maxWidth="100dp"
        android:onClick="dangerOnClick"
        android:contentDescription="@string/imagemDescrible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitle"
        app:srcCompat="@drawable/danger" />

    <ImageView
        android:id="@+id/imageViewMic"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="176dp"
        android:onClick="micOnClick"
        android:contentDescription="@string/imagemDescrible"
        app:layout_constraintStart_toStartOf="@+id/imageViewDanger"
        app:layout_constraintTop_toBottomOf="@+id/imageViewDanger"
        app:srcCompat="@drawable/microfone" />

    <ImageView
        android:id="@+id/imageViewEmotions"
        android:layout_width="166dp"
        android:layout_height="100dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="40dp"
        android:onClick="emotionOnClick"
        android:text="@string/emotionName"
        android:contentDescription="@string/imagemDescrible"
        app:layout_constraintEnd_toStartOf="@+id/imageViewVibra"
        app:layout_constraintHorizontal_bias="0.142"
        app:layout_constraintStart_toEndOf="@+id/imageViewMic"
        app:layout_constraintTop_toBottomOf="@+id/imageViewDanger"
        app:srcCompat="@drawable/emotions_main" />

    <ImageView
        android:id="@+id/imageViewOrder"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="40dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="176dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="176dp"
        android:maxHeight="100dp"
        android:maxWidth="100dp"
        android:onClick="mapOnClick"
        android:contentDescription="@string/imagemDescrible"
        app:layout_constraintBottom_toTopOf="@+id/imageViewEmotions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imageViewDanger"
        app:srcCompat="@drawable/order" />

    <ImageView
        android:id="@+id/imageViewVibra"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginLeft="176dp"
        android:layout_marginStart="176dp"
        android:layout_marginTop="176dp"
        android:maxHeight="100dp"
        android:maxWidth="100dp"
        android:onClick="vibraOnClick"
        android:contentDescription="@string/imagemDescrible"
        app:layout_constraintStart_toEndOf="@+id/imageViewMic"
        app:layout_constraintTop_toBottomOf="@+id/imageViewOrder"
        app:srcCompat="@drawable/vibra" />

    <TextView
        android:id="@+id/textViewDanger"
        android:layout_width="wrap_content"
        android:layout_height="26dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="20dp"
        android:text="@string/dangerName"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/imageViewDanger"
        app:layout_constraintEnd_toEndOf="@+id/imageViewDanger"
        app:layout_constraintHorizontal_bias="0.392"
        app:layout_constraintStart_toStartOf="@+id/imageViewDanger" />

    <TextView
        android:id="@+id/textViewOrder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/orderName"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/imageViewOrder"
        app:layout_constraintEnd_toEndOf="@+id/imageViewOrder"
        app:layout_constraintHorizontal_bias="0.951"
        app:layout_constraintStart_toStartOf="@+id/imageViewOrder" />

    <TextView
        android:id="@+id/textViewMicrofone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="28dp"
        android:text="@string/micName"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/imageViewMic"
        app:layout_constraintHorizontal_bias="0.222"
        app:layout_constraintStart_toStartOf="@+id/imageViewMic"
        app:layout_constraintTop_toBottomOf="@+id/imageViewMic" />

    <TextView
        android:id="@+id/textViewVibra"
        android:layout_width="wrap_content"
        android:layout_height="21dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:text="@string/vibraName"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/imageViewVibra"
        app:layout_constraintHorizontal_bias="0.77"
        app:layout_constraintStart_toStartOf="@+id/imageViewVibra"
        app:layout_constraintTop_toBottomOf="@+id/imageViewVibra" />

    <TextView
        android:id="@+id/textViewEmotions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/emotionName"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/imageViewEmotions"
        app:layout_constraintEnd_toEndOf="@+id/imageViewEmotions"
        app:layout_constraintStart_toStartOf="@+id/imageViewEmotions" />

</android.support.constraint.ConstraintLayout>